# itambox-webapp

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  GAP_REPORT.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  template-cleanup.ps1
.github/: actionlint.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-smoke.yml  e2e.yml  release.yml  runner-heavy-validation.yml  runner-validation.yml  security.yml
assetbox/: .gitignore  .prettierrc  bundle.mjs  compile_locale.py  copy-vendor.mjs  eslint.config.js  index.js  mkdocs.yml  package-lock.json  package.json  requirements.txt  schema.yaml  tsconfig.json  zensical.toml
assetbox/assetbox/: apps.py  context_processors.py  middleware.py  object_actions.py  panels.py  registry.py  utils.py
assetbox/assets/: admin.py  apps.py  filters.py  forms.py  models.py  reconciliation.py  search.py  services.py  signals.py  tables.py  tests.py  urls.py  views.py
assetbox/compliance/: filters.py  forms.py  models.py  tables.py  tests.py  urls.py  views.py
assetbox/components/: admin.py  apps.py  filters.py  forms.py  models.py  search.py  tables.py  tests.py  urls.py  views.py
assetbox/core/: apps.py  auth.py  choices.py  constants.py  context_processors.py  crypto.py  events.py  forms.py  managers.py  middleware.py  mixins.py  models.py  paginator.py  querysets.py  quick_add.py  registry.py  reports_charts.py  search.py  search_backends.py  settings.py  signals.py  tables.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py
assetbox/docs/: index.md
assetbox/extras/: apps.py  filters.py  forms.py  models.py  search.py  signals.py  tables.py  tests.py  urls.py  utils.py  validators.py  views.py
assetbox/inventory/: admin.py  apps.py  filters.py  forms.py  models.py  search.py  services.py  tables.py  tests.py  urls.py  views.py
assetbox/licenses/: admin.py  apps.py  filters.py  forms.py  models.py  search.py  tables.py  tests.py  urls.py  views.py
assetbox/organization/: admin.py  apps.py  filters.py  forms.py  models.py  search.py  signals.py  tables.py  tests.py  urls.py  views.py
assetbox/software/: admin.py  forms.py  models.py  search.py  tables.py  tests.py  urls.py  views.py
assetbox/subscriptions/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  tables.py  tests.py  urls.py  views.py
assetbox/templates/: base.html  base_htmx.html  base_public.html  dashboard.html  dashboard_content.html  layout.html
assetbox/users/: forms.py  models.py  search.py  tests.py  urls.py  views.py
assets/: admin.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
docs/: README.md  architecture.md  features.md  testing_and_verification.md  user-guide.md
docs/development/: module-maturity.md
docs/usage/: depreciation.md
extras/: models.py  signals.py
itambox/: .env.example  .gitignore  bundle.mjs  conftest.py  copy-vendor.mjs  eslint.config.js  mkdocs.yml  package-lock.json  package.json  requirements-dev.txt  requirements.txt  schema.yaml  zensical.toml
itambox/assets/: admin.py  choices.py  depreciation.py  filters.py  models.py  reconciliation.py  scanning.py  schema.py  search.py  services.py  signals.py  tables.py  tasks.py  urls.py  urls_audits.py  urls_requests.py  views_scan.py
itambox/compliance/: apps.py  choices.py  filters.py  forms.py  forms_audit.py  forms_filter.py  models.py  providers.py  reconciliation.py  registry.py  search.py  tables.py  urls.py  views.py  views_audit.py
itambox/components/: admin.py  apps.py  filters.py  forms.py  models.py  schema.py  urls.py  views.py
itambox/core/: admin.py  apps.py  auth.py  choices.py  crypto.py  csv_utils.py  currency.py  events.py  features.py  filters.py  graphql_utils.py  http.py  integrity.py  managers.py  mfa.py  mixins.py  models.py  otp_middleware.py  paginator.py  reports_charts.py  schedules.py  schema.py  search.py  search_backends.py  signals.py  tables.py  tasks.py  urls.py  utils.py  validators.py  worker_status.py
itambox/docs/: dashboard.md  index.md
itambox/extras/: admin.py  apps.py  customfields.py  filters.py  forms.py  models.py  search.py  signals.py  tables.py  urls.py  urls_contexts.py  utils.py  views.py
itambox/inventory/: abstract_models.py  admin.py  filters.py  forms.py  mixins.py  models.py  schema.py  search.py  services.py  tables.py  urls.py  views.py
itambox/itambox/: apps.py  constants.py  context_processors.py  dictutils.py  logging_filters.py  middleware.py  object_actions.py  panels.py  quick_add.py  ratelimit.py  registry.py  utils.py
itambox/itambox_esign/: __init__.py  auth.py  models.py  navigation.py  providers.py  template_content.py  tests.py  urls.py  views.py
itambox/licenses/: admin.py  filters.py  forms.py  models.py  reconciliation.py  schema.py  services.py  tables.py  urls.py  views.py
itambox/organization/: access.py  admin.py  apps.py  filters.py  models.py  rbac.py  rbac_sync.py  search.py  services.py  signals.py  tables.py  urls.py
itambox/procurement/: admin.py  filters.py  forms.py  models.py  services.py  tables.py  tests.py  urls.py  views.py
itambox/software/: apps.py  filters.py  forms.py  models.py  schema.py  tables.py  urls.py  views.py
itambox/static/: generate_icons.py
itambox/subscriptions/: admin.py  apps.py  filters.py  forms.py  models.py  schema.py  search.py  tables.py  tasks.py  urls.py  views.py
itambox/templates/: base.html  base_htmx.html  base_public.html  dashboard.html  layout.html  manifest.json  offline.html  service-worker.js
itambox/users/: admin.py  apps.py  filters.py  forms.py  (+6 more)
organization/: views.py
scripts/: check_flake8_baseline.py  docker-smoke-test.sh  flake8_baseline.json  install_security_tools.sh  migration_audit.json  migration_audit.py  release_policy.py  security_gate.py
(+1975 files in other folders)
