[project]
name = "itambox"
version = "1.0.0-alpha1"
description = "IT Asset Management System inspired by NetBox"
requires-python = ">=3.11"
# NOTE: ITAMbox is NOT pip-installable and does not ship wheels/sdists. The apps
# are top-level packages (core, organization, assets, ...) rooted in itambox/ —
# packaging them would install a package literally named `core` into
# site-packages. The supported deployment paths are Docker (see Dockerfile /
# docker-compose.yml) and a checkout + virtualenv provisioned from
# itambox/requirements.txt (the canonical, fully-pinned install set — it also
# carries transitives this list omits, e.g. mozilla-django-oidc, gunicorn,
# whitenoise, pyOpenSSL). This [project] table exists for metadata and tooling
# only; keep version ranges roughly in sync with requirements.txt.
dependencies = [
    "Django>=5.2,<5.3",
    "djangorestframework>=3.16,<3.17",
    "django-tables2>=2.7,<2.8",
    "django-filter>=25.2,<25.3",
    "django-htmx>=1.21,<1.28",
    "django-template-partials>=25.3,<25.4",
    "Jinja2>=3.1,<4.0",
    "django-crispy-forms>=2.6,<2.7",
    "crispy-bootstrap5>=2026.3,<2027",
    "django-taggit>=6.1,<6.2",
    "drf-spectacular>=0.29,<0.30",
    "Pillow>=10.0,<12.0",
    "requests>=2.31,<3.0",
    # Excluded on native Windows: pulls python-ldap, which has no Windows binary
    # wheel and fails to build there. Docker/Linux/WSL images are unaffected.
    "django-auth-ldap>=5.1,<6.0; platform_system != \"Windows\"",
    "djangosaml2>=1.9,<2.0",
    "segno>=1.6,<2.0",
    "python-barcode>=0.15,<1.0",
    "django-q2>=1.7,<2.0",
    "sqlparse>=0.5.4,<0.6.0",
    "django-cors-headers>=4.4,<5.0",
    # Database driver — required at boot (settings reject SQLite). Without this,
    # `pip install .` produces a non-bootable app.
    "psycopg2-binary>=2.9,<3.0",
    # Cache / broker client. django-redis is referenced by core/settings when
    # ITAMBOX_CACHE_BACKEND=redis (the prod-recommended multi-worker config), and
    # `redis` is the wire client it drives; ship both in the base set so the redis
    # cache path is always available.
    "django-redis>=5.4,<6.0",
    "redis>=5.2,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "factory_boy>=3.3,<4.0",
    "tblib>=3.0,<4.0",
    "django-debug-toolbar>=4.4,<5.0",
    "model_bakery",
    "pytest-cov",
    "pytest-xdist",
]
celery = [
    "celery>=5.4,<5.7",
    "redis>=5.2,<6.0",
]

# No [build-system] / setuptools packaging on purpose: `pip install .` is an
# unsupported path (see the NOTE on [project] above) and should fail loudly
# rather than produce an empty or hazardous top-level install.

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py"]
# Fast by default: reuse the test DB across runs (stable name set in conftest), so the
# ~200 migrations aren't rebuilt every run. Coverage is NOT measured by default (it
# ~3x's a run); pass `--cov=. --cov-report=html` explicitly, or run the CI job.
#
# pytest-xdist is installed but NOT enabled by default: the suite is not yet xdist-safe
# (cross-test shared state — MEDIA_ROOT, requests-mock + django-q timing — makes a
# handful of tests fail non-deterministically under `-n auto`). Once those are isolated
# (per-worker MEDIA_ROOT, etc.) add `-n auto` here. Until then run `-n auto` ad hoc when
# you know the targeted subset is parallel-clean.
addopts = ["--tb=short", "-p", "no:warnings", "--reuse-db", "--no-cov-on-fail"]
norecursedirs = [".venv", "scratch", "node_modules", ".git", ".agents", ".*"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/tests.py",
    "*/conftest.py",
    "manage.py",
    "core/wsgi.py",
    "core/asgi.py",
    "itambox/wsgi.py",
    "itambox/asgi.py",
]

[tool.coverage.report]
# Realistic floor (true source coverage ~43%); ratchet upward over time. The old
# 80 was unattainable so every run "failed" the gate and it enforced nothing.
fail_under = 45
show_missing = true
