[project]
name = "itambox"
version = "1.0.0-alpha1"
description = "IT Asset Management System inspired by NetBox"
requires-python = ">=3.12"
# NOTE: ITAMbox is NOT pip-installable and does not ship wheels/sdists. The apps
# are top-level packages (core, organization, assets, ...) rooted in itambox/ —
# packaging them would install a package literally named `core` into
# site-packages. The supported deployment paths are Docker (see Dockerfile /
# docker-compose.yml) and a checkout synchronized from uv.lock. This table is
# the only source of direct runtime dependency policy; uv.lock records the exact
# cross-platform resolution used by Docker, CI, and contributors.
dependencies = [
    "Django>=5.2,<6.1",
    "djangorestframework>=3.17.1,<3.18",
    "drf-spectacular[sidecar]>=0.29,<0.30",
    "django-tables2>=3.0.0,<3.1",
    "django-filter>=25.2,<25.3",
    "django-htmx>=1.21,<1.28",
    "django-template-partials>=25.3,<25.4",
    "django-crispy-forms>=2.6,<2.7",
    "crispy-bootstrap5>=2026.3,<2027",
    "django-taggit>=6.1,<6.2",
    "django-q2>=1.7,<2.0",
    "sqlparse>=0.5.4,<0.6.0",
    "croniter>=6.0,<7.0",
    "python-dateutil>=2.9,<3.0",
    "graphene-django>=3.2,<3.3",
    "graphene>=3.3,<4.0",
    "django-otp>=1.4,<1.5",
    # Excluded on native Windows: pulls python-ldap, which has no Windows binary
    # wheel and fails to build there. Docker/Linux/WSL images are unaffected.
    "django-auth-ldap>=5.1,<6.0; platform_system != \"Windows\"",
    "djangosaml2>=1.12.0,<2.0",
    "mozilla-django-oidc>=5.0.2,<6.0.0",
    "pyOpenSSL>=24.3,<27",
    "django-cors-headers>=4.9.0,<5.0",
    "requests>=2.31,<3.0",
    "gunicorn>=26.0.0,<27.0",
    "whitenoise>=6.6,<7.0",
    "psycopg2-binary>=2.9.12,<3.0",
    "django-redis>=5.4,<6.0",
    "redis>=8.0.1,<9.0",
    "Pillow>=12.3.0,<13.0",
    # Excluded on native Windows because importing without a usable libmagic DLL
    # can hang. Docker/Linux/WSL retain full MIME signature validation.
    "python-magic>=0.4.27,<0.5; platform_system != \"Windows\"",
    "segno>=1.6,<2.0",
    "python-barcode>=0.15,<1.0",
    "markdown>=3.10,<3.11",
    "Jinja2>=3.1,<4.0",
    "xhtml2pdf>=0.2.17,<0.3",
    "svglib>=2.0.2,<2.1",
    "openpyxl>=3.1,<3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-django>=4.8,<5.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-xdist>=3.5,<4.0",
    "model-bakery>=1.17,<2.0",
    "factory_boy>=3.3,<4.0",
    "tblib>=3.0,<4.0",
    "django-debug-toolbar>=4.4,<5.0",
    # Exact versions: scripts/flake8_baseline.json is diagnostic-version-bound.
    "flake8==7.0.0",
    "flake8-bugbear==24.12.12",
    "mccabe==0.7.0",
    "pycodestyle==2.11.1",
    "pyflakes==3.2.0",
    "pre-commit>=4.0,<5.0",
    "PyYAML>=6.0,<7.0",
]
docs = [
    "mkdocs>=1.6.1,<2.0",
    "mkdocs-material>=9.5",
]

[tool.uv]
package = false
required-version = "==0.11.31"

# No [build-system] / setuptools packaging on purpose: uv synchronizes the
# declared dependencies but never installs the checkout as a package.

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py"]
# Fast by default: reuse the test DB across runs (stable name set in conftest), so the
# ~200 migrations aren't rebuilt every run. Coverage is NOT measured by default (it
# ~3x's a run); pass `--cov=. --cov-report=html` explicitly, or run the CI job.
#
# pytest-xdist is installed but NOT enabled by default: the suite is not yet xdist-safe
# (cross-test shared state — MEDIA_ROOT, requests-mock + django-q timing — makes a
# handful of tests fail non-deterministically under `-n auto`). Once those are isolated
# (per-worker MEDIA_ROOT, etc.) add `-n auto` here. Until then run `-n auto` ad hoc when
# you know the targeted subset is parallel-clean.
addopts = ["--tb=short", "-p", "no:warnings", "--reuse-db", "--no-cov-on-fail"]
norecursedirs = [".venv", "scratch", "node_modules", ".git", ".agents", ".*"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/tests.py",
    "*/conftest.py",
    "manage.py",
    "core/wsgi.py",
    "core/asgi.py",
    "itambox/wsgi.py",
    "itambox/asgi.py",
]

[tool.coverage.report]
# Realistic floor (true source coverage ~43%); ratchet upward over time. The old
# 80 was unattainable so every run "failed" the gate and it enforced nothing.
fail_under = 45
show_missing = true
